src/test/deca/context/valid/created/initialization-float-int.deca
//Description :
// Assignation d'un int dans un float
//
// Resultats :
//


{
    float x = 2;
}
