src/test/deca/context/invalid/created/assign-double-incomp-bis.deca
//Description :
// Assignation double incompatible
//
// Resultats :
// Erreur

{
    int x;
    boolean y;

    x = y = true;
}
